# chatgpt-desktop-unix

./: CMakeLists.txt  README.md
src/: appwindow.h  chatview.cpp  chatview.h  main.cpp
